Improved UI on mobile and fixed a bug on the return stop selection

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -123,13 +123,12 @@ p, legend, h1, h2, h3, h4, h5, h6 {
 
 .tt-input,
 .tt-hint {
-    padding: 0.8rem 0.8rem;
+    padding: 1.8rem 1.8rem;
     font-size: 1.7rem;
     border: 1px solid #ccc;
     outline: none;
     color: #757474;
     height: 3rem;
-    width: 20rem;
     border-radius: 0;
     -webkit-box-shadow: 4px 3px 5px rgba(50, 50, 50, 0.2);
     -moz-box-shadow:    4px 3px 5px rgba(50, 50, 50, 0.2) !important;
@@ -179,14 +178,14 @@ p, legend, h1, h2, h3, h4, h5, h6 {
 
 .btnContainer {
 	text-align: center;
-	margin-top: 2.5rem;
+	margin-top: 4.5rem;
 }
 
 .btn-lg {
 	border-radius: 3px;
 	background-color: transparent;
 	border-color: white;
-	padding: 8px 16px;
+	padding: 1rem 4rem;
   color: white;
 }
 
